--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,90 +88,37 @@ app:layout_constraintTop_toBottomOf="@id/top_container">
         app:menu="@menu/menu2" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Постеры предоставлены: https://www.movieposters.com/"
-        android:textColor="#0D0606"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        android:autoLink="web"
+        android:background="#00D5A1A1"
+        android:fontFamily="sans-serif"
+        android:linksClickable="true"
+        android:text="Постеры https://www.movieposters.com/"
+        android:textColor="#140C0C"
+        android:textColorLink="#F1FFFFFF"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_container"
-        app:layout_constraintVertical_bias="0.028"
+        app:layout_constraintTop_toTopOf="@+id/appBarLayout"
+        app:layout_constraintVertical_bias="0.53"
         tools:ignore="MissingConstraints" />
 
-    <androidx.gridlayout.widget.GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_recycler"
+        android:layout_width="378dp"
+        android:layout_height="383dp"
         android:layout_margin="16dp"
-        android:background="#11B2FF59"
-        app:columnCount="2"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        android:layout_marginTop="372dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:orientation="horizontal"
-        app:useDefaultMargins="true"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="@+id/topAppBar"
+        app:layout_constraintVertical_bias="0.692"
+        tools:listitem="@layout/film_item" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_8"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layoutAnimation="@anim/anim"
-                android:scaleType="centerCrop"
-                android:src="@drawable/poster_8" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_7"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layoutAnimation="@anim/anim"
-                android:scaleType="centerCrop"
-                android:src="@drawable/poster_7" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_6"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layoutAnimation="@anim/anim"
-                android:scaleType="centerCrop"
-                android:src="@drawable/poster_6" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_5"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layoutAnimation="@anim/anim"
-                android:scaleType="centerCrop"
-                android:src="@drawable/poster_5" />
-        </androidx.cardview.widget.CardView>
-
-    </androidx.gridlayout.widget.GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
