--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/poster_1"
+            android:id="@+id/poster"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
@@ -29,7 +29,7 @@
             android:textAlignment="center"
             android:padding="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            app:layout_constraintLeft_toRightOf="@+id/poster_1"
+            app:layout_constraintLeft_toRightOf="@+id/poster"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Title" />
@@ -40,7 +40,7 @@
             android:layout_height="0dp"
             android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/poster_1"
+            app:layout_constraintLeft_toRightOf="@+id/poster"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title"
             tools:text="@tools:sample/lorem/random" />
