--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:minHeight="60dp"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/color3"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/details_toolbar">
 
