--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,14 +10,15 @@
         android:id="@+id/top_container"
         android:layout_width="318dp"
         android:layout_height="96dp"
-        android:layout_marginBottom="52dp"
         android:elevation="5dp"
         app:cardBackgroundColor="#487C4DFF"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toTopOf="@+id/disclaimer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.87">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,8 +74,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recycler"
-        android:layout_width="332dp"
-        android:layout_height="495dp"
+        android:layout_width="340dp"
+        android:layout_height="449dp"
         android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
