--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".HomeFragment">
+    tools:context=".HomeFragment"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/top_container"
@@ -81,7 +82,7 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topAppBar"
         tools:listitem="@layout/film_item" />
 
+    <include layout="@layout/bottom_sheet" />
 </androidx.constraintlayout.widget.ConstraintLayout>
