--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -10,6 +10,7 @@
         android:id="@+id/favorites_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         tools:listitem="@layout/film_item"
         android:clipToPadding="false"
         android:padding="16dp"
@@ -17,32 +18,30 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="759dp"
         android:orientation="vertical"
         android:padding="8dp">
 
         <ImageView
             android:id="@+id/poster"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="837dp"
             android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="8dp"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:paddingTop="8dp" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:paddingTop="4dp" />
+            android:paddingTop="4dp"
+            android:textSize="14sp" />
     </LinearLayout>
-
-
 
 </FrameLayout>
