--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/shape"
+    android:background="@drawable/shape1"
     app:behavior_peekHeight="70dp"
     app:layout_behavior="@string/bottom_sheet_behavior"
     tools:context=".MainActivity">
